# miner-tauri-gui

./: README.md  agents.md  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: bump-version.yml  ci.yml  publish-draft-release.yml  release.yml
src/: App.tsx  api.ts  celebrate.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: account.rs  account_cli.rs  account_path.rs  commands.rs  installer.rs  lib.rs  main.rs  miner.rs  node_key.rs  parse.rs  rpc.rs
src/assets/: canvas-confetti.d.ts
src/styles/: tailwind.css
