[package]
name = "quantus-miner"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "quantus_miner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
#tauri = { version = "2", features = ["shell-open"] }
#tauri-plugin-shell = "2"
#tauri-plugin-process = "2"
#tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = [
    "process",
    "rt-multi-thread",
    "macros",
    "time",
] }
regex = "1"
dirs = "5"
rand = "0.8"
base64 = "0.22"
time = { version = "0.3", features = ["serde", "formatting"] }

# account.rs: temporary. remove when cli key gen is implemented
blake3 = "1"
hex = "0.4"

# parse.rs
once_cell = "1"
lazy_static = "1"
nix = { version = "0.29", features = ["signal", "process"] }
